src/core/snapshots/credibil_vc__core__types__tests__language_string_serialization.snap
---
source: src/core/types.rs
assertion_line: 181
expression: hydrated
---
name:
  "@value": Alice
  "@language": en
description:
  - "@value": "HTML and CSS: Designing and Creating Websites"
    "@language": en
  - "@value": "HTML و CSS: تصميم و إنشاء مواقع الويب"
    "@language": ar
    "@direction": rtl
other: Just a string
