src/core/snapshots/credibil_vc__core__types__tests__language_string_serialization_json.snap
---
source: src/core/types.rs
assertion_line: 185
expression: serialized
---
description:
  - "@language": en
    "@value": "HTML and CSS: Designing and Creating Websites"
  - "@direction": rtl
    "@language": ar
    "@value": "HTML و CSS: تصميم و إنشاء مواقع الويب"
name:
  "@language": en
  "@value": Alice
other: Just a string
